fixed flow errors, added missing colors to colors.css, added comment to lp in splitHTMLDescr, removed !important from alignment in dropdown.css

--- a/app/web_modules/sourcegraph/components/styles/dropdown.css
+++ b/app/web_modules/sourcegraph/components/styles/dropdown.css
@@ -2,17 +2,19 @@
 @value colors "sourcegraph/components/styles/_colors.css";
 @value menu "sourcegraph/components/styles/menu.css";
 
+@value c_dark-blue from colors;
+
 .wrapper {
 	composes: blue from colors;
 	display: inline-block;
 	float: right;
 	line-height: 1.45;
 	cursor: pointer;
-	vertical-align: middle !important;
+	vertical-align: middle;
 }
 
 .wrapper:hover{
-	color: rgba(0, 82, 140, 1);
+	color: c_dark-blue;
 }
 
 .wrapper-disabled {
