--- a/app/web_modules/sourcegraph/def/styles/Refs.css
+++ b/app/web_modules/sourcegraph/def/styles/Refs.css
@@ -51,8 +51,7 @@
 .filename {
 	composes: bb from base;
 	composes: f5 fw1 from typography;
-	composes: mid-gray from colors;
-	border-color: #d8d8d8;
+	composes: mid-gray b--light-gray-2 from colors;
 	display: flex;
 	align-content: flex-start;
 	justify-content: center;
@@ -61,11 +60,11 @@
 
 .breadcrumbIcon{
 	composes: pt2 pb2 from base;
+	composes: bg-light-blue from colors;
 	min-width: 39px;
 	display: flex;
 	justify-content: center;
 	align-content: center;
-	background-color: rgba(64,120,192,.06);
 }
 
 .pathContainer {
